--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,610 @@
+*{color: aliceblue;
+  padding: 0%;
+  margin: 0%;
+  
+}
 
+html {
+  scroll-behavior: smooth;
+}
+
+body{background-color: black;
+  width: 100%;
+  height: 100vh ;
+  overflow-x: hidden;
+}
+
+  
+/*glowing header*/
+  header{
+      width: 94%;
+      height: 80%;
+      border: 1px solid rgb(1, 1, 1);
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0px 5px 25px -1px whitesmoke;
+     margin: auto;
+     margin-top: 6%;      
+    z-index: -1;
+
+   
+  }
+ 
+/*
+  header::before{
+      content: '';
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(0deg,transparent,black);
+      opacity: .10;
+      z-index: -1;
+      margin-top: 10%; 
+      background: url(spacem.jpeg);
+      
+  
+  }
+  
+*/
+
+video {
+position: absolute;
+left: 0;
+bottom: 100%;
+width: 110%;
+height: 120%;
+top: 0%;
+object-fit: cover;
+
+}
+
+/*navigation bar*/
+nav{
+  font-weight: 660;
+  font-size: 110%;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  transition: 1.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+  background-color: #000000 ;
+
+}
+
+ul,li :hover {
+  color: blue;
+}
+
+
+.m1 {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  z-index: 20;
+}
+/* slide show*/
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.swiper::selection{
+  user-select: none;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 16px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide .image .black{
+  width: 40%;
+  height: 0%;
+  left: 4%; 
+  position: relative;
+}
+
+.swiper-slide h1{
+  margin-left: -28px;
+  padding: 0px;
+}
+
+
+.swiper-slide .image .black .star{
+  color: #faf9f8;
+  text-align: left;
+  font-size: 16px;
+  margin: 0px ;
+  position: relative;
+  top: 36%;
+  left: 4.5%;
+}
+
+.swiper-slide .image .black p{
+  width: 580px;
+  text-align: justify;
+  font-size: 16px;
+  color: #cccccc;
+  margin: 0;
+  position: relative;
+  top: 35%;
+  left: 5%;
+  font-family: sans-serif;
+}
+
+/*genres*/
+.swiper-slide .image .black .genre{
+  text-align: left;
+  font-size: 16px;
+  margin: 13px 0;
+  position: relative;
+  top: 38%;
+  left: 5%;
+}
+/*genres*/
+.swiper-slide .image .black .genre a.category{
+  background: #282931;
+  text-decoration: none;
+  color: #cccccc;
+  padding: 2px 7px;
+}
+
+.swiper-slide .image .black .genre a.category span{
+  color: #ffe100;
+}
+/*watch Trailer container*/
+.swiper-slide .image .black .watch{
+  width: 700px;
+  text-align: left;
+  display: flex;
+  font-size: 18px;
+  margin: 10px 0;
+  position: relative;
+  top: 35%;
+  left: 5%;
+}
+/*watch Trailer button*/
+.swiper-slide .image .black .watch i{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 20px;
+  text-align: center;
+  background-color: darkcyan
+  ;border-radius: 50%;
+  cursor: pointer;
+}
+
+.swiper-slide .image .black .watch p{
+  position: relative;
+  left: 15px;
+  font-family: sans-serif;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header video {
+  position: absolute;
+  width: 110%;
+  height: 100%;
+  object-fit: cover; /* Ensure the video fills the entire slide */
+  
+}
+
+/* slide show WORDS*/
+
+.swiper-slide .image .black {
+  position: absolute;
+  width: 30%;
+  z-index: 1; /* Ensure the black overlay is above the video */
+}
+
+
+
+
+
+.black {
+  position: absolute;
+  bottom: 10%;
+  top: 55%;
+  left: 1%; /* Adjust the left position as needed */
+  transform: translateY(-50%);
+  z-index: 10; /* Ensure the content is above the video */
+  color: white; /* Change text color to ensure visibility */
+  text-decoration: none;
+  
+}
+
+
+
+
+/*-------*/
+
+
+/*popular now container bg(gray)*/
+.second{
+  width: 100%;
+  height: auto;
+  margin:  auto;
+  padding-bottom: 25px;
+  background: #1b1b1b;
+}
+
+
+/*container of the movies*/
+.second .latest{
+  width: 95%;
+  margin: 0 auto;
+}
+/*popular now*/
+.second .latest h2{
+  color: #ffffff;
+  margin-bottom: 20px;
+  font-weight: 700 ;
+}
+
+/*movie container formating(side by side)*/
+.second .latest .box{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+/* focuses on the image in the box*/
+.second .latest .box .card{
+  min-width: 100px;
+  max-width:  250px;
+  height: 370px;
+  margin: 10px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+
+.second .latest .box .card .details{
+  width: 250px;
+  height: 370px;
+  overflow: hidden;
+  position: absolute;
+  border-radius: 8px;
+  transition: 0.3s;
+}
+
+.mvp{
+  width: 2000px;
+}
+
+/*hovering details*/
+
+.second .latest .box .card:hover .details{
+  opacity: 1;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.7));
+
+}
+
+
+.second .latest .box .card .details .left{
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  transform: translateX(-100px);
+  transition: 0.8s;
+  opacity: 0;
+}
+
+.second .latest .box .card:hover .details .left{
+  opacity: 1;
+  transform: translateX(0);
+}
+
+/*-----*/
+/*popular now discription*/
+.second .latest .box .card .details .left p.name{
+  width: 100%;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.second .latest .box .card .details .left .date_quality{
+  display: flex;
+  align-items: center;
+}
+
+.second .latest .box .card .details .left .date_quality p.quality{
+  width: 30px;
+  font-size: 13px;
+  background: #80dcf5;
+  color: #000000;
+  margin-left: 10px;
+  margin-bottom: 8px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.second .latest .box .card .details .left .date_quality p.date{
+  color: #fff;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: left;
+  margin-left: 10px;
+  margin-bottom: 8px;
+}
+
+.second .latest .box .card .details .left p.category{
+  margin-left: 10px;
+  font-size: 13px;
+  margin-bottom: 8px;
+}
+
+.second .latest .box .card .details .left .info{
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.second .latest .box .card .details .left .info .rate{
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.second .latest .box .card .details .left .info .rate i{
+  font-size: 12px;
+  color: #ffd500;
+  margin-right: 5px;
+}
+
+.second .latest .box .card .details .left .info .rate p{
+  font-size: 12px;
+}
+
+.second .latest .box .card .details .left .info .time{
+  display: flex;
+  align-items: center;
+}
+
+.second .latest .box .card .details .left .info .time i{
+  font-size: 12px;
+  color: #00bcd1;
+  margin-left: 5px;
+}
+
+.second .latest .box .card .details .left .info .time p{
+  font-size: 12px;
+  margin-left: 5px;
+}
+
+.second .latest .box .card .details .right{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  color: #fff;
+  transform: translateX(100px);
+  transition: 1.9s;
+  opacity: 0;
+}
+
+.second .latest .box .card:hover .details .right{
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.second .latest .box .card .details .right i{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 20px;
+  text-align: center;
+  background-color: #04868f;
+  border-radius: 50%;
+  cursor: pointer;
+  color: #282931;
+  margin: 0 10px 8px 0;
+}
+/*popular now img in the box*/
+.second .latest .box .card img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+
+
+
+/*---------*/
+.upcoming{
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding-bottom: 25px;
+  background-color: #171717;
+}
+
+.upcoming .movies_box{
+  width: 95%;
+  margin: 0 auto;
+}
+
+.upcoming .movies_box h1{
+  font-size: 20px;
+  color: #fff;
+  margin-bottom: 20px;
+}
+.upcoming .movies_box .box{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.upcoming .movies_box .box .card{
+  width: 250px;
+  height: 370px;
+  margin: 10px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.upcoming .movies_box .box .card .details{
+  width: 250px;
+  height: 370px;
+  overflow: hidden;
+  position: absolute;
+  border-radius: 8px;
+  transition: 0.3s;
+  opacity: 0;
+}
+
+.upcoming .movies_box .box .card:hover .details{
+  opacity: 1;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.7));
+}
+
+.upcoming .movies_box .box .card .details .left{
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  transform: translateX(-100px);
+  transition: 0.4s;
+  opacity: 0;
+}
+
+.upcoming .movies_box .box .card:hover .details .left{
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.upcoming .movies_box .box .card .details .left p.name{
+  width: 100%;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.upcoming .movies_box .box .card .details .left .date_quality{
+  display: flex;
+  align-items: center;
+}
+
+.upcoming .movies_box .box .card .details .left .date_quality p.quality{
+  width: 30px;
+  font-size: 13px;
+  background: #09cfdd;
+  color: #282931;
+  margin-left: 10px;
+  margin-bottom: 8px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.upcoming .movies_box .box .card .details .left .date_quality p.date{
+  color: #fff;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: left;
+  margin-left: 10px;
+  margin-bottom: 8px;
+}
+
+.upcoming .movies_box .box .card .details .left p.category{
+  margin-left: 10px;
+  font-size: 13px;
+  margin-bottom: 8px;
+}
+
+.upcoming .movies_box .box .card .details .left .info{
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.upcoming .movies_box .box .card .details .left .info .time{
+  display: flex;
+  align-items: center;
+}
+
+.upcoming .movies_box .box .card .details .left .info .time i{
+  font-size: 12px;
+  color: #09cfdd;
+  margin-left: 5px;
+}
+
+
+.upcoming .movies_box .box .card .details .left .info .time p{
+  font-size: 12px;
+  margin-left: 5px;
+}
+
+.upcoming .movies_box .box .card .details .right{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  color: #fff;
+  transform: translateX(100px);
+  transition: 0.4s;
+  opacity: 0;
+}
+
+.upcoming .movies_box .box .card:hover .details .right{
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.upcoming .movies_box .box .card .details .right i{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 20px;
+  text-align: center;
+  background-color: #04868f;
+  border-radius: 50%;
+  cursor: pointer;
+  color: #282931;
+  margin: 0 10px 8px 0;
+}
+
+.upcoming .movies_box .box .card img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+
+
+
+/*----------*/
+
+footer {
+  background-color: #000000;
+  margin-top: 40px;
+  height: 85px;
+  position: absolute;
+}
+
+footer .ftr .fa-brands {
+  
+  background-color: #000000;
+  padding-left: 30px;
+}
+
+.ftr {
+  margin-left: 650px ;
+}
