--- a/css/style1.css
+++ b/css/style1.css
@@ -1,1 +1,20 @@
+main{
+
+    width: 80%;
+    margin: auto;
+    margin-top: 160px ; 
+    height: 80%;
+}
+
+
+.g8{ 
+    background: #282931;
+}
+
+
+.Terms{
+    padding-top: 20px;
+    width: 90%;
+    margin-left: 10px;
+}
 
